src/objects/Account_Profitability__c.object
<CustomObject>
    <fields>
        <fullName>Commissions__c</fullName>
        <formula>IF(profitability_category_type__c=&quot;Comisiones&quot;, currenct_mon_amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comisiones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facturaci_n__c</fullName>
        <formula>IF( profitability_category_type__c=&quot;Altas&quot; &amp;&amp; product_desc__c=&quot;CLIENTE&quot;, currenct_mon_amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facturación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Margin__c</fullName>
        <formula>IF(profitability_category_type__c=&quot;Margen Financiero&quot;, currenct_mon_amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margen financiero</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Origin_currenIsoCode__c</fullName>
        <label>Moneda Original</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Periodo__c</fullName>
        <formula>RIGHT(TEXT(YEAR(year_month_day_date__c)),4) + &apos;/&apos; + CASE(
MONTH( year_month_day_date__c),
1, &quot;01&quot;,
2, &quot;02&quot;,
3, &quot;03&quot;,
4, &quot;04&quot;,
5, &quot;05&quot;,
6, &quot;06&quot;,
7, &quot;07&quot;,
8, &quot;08&quot;,
9, &quot;09&quot;,
10, &quot;10&quot;,
11, &quot;11&quot;,
&quot;12&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Periodo</label>
        <type>Text</type>
    </fields>
    <fields>		
        <fullName>Spread__c</fullName>
        <formula>IF(profitability_category_type__c=&quot;Spread&quot; &amp;&amp; product_desc__c=&quot;CLIENTE&quot;,currenct_mon_per__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spread</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>origin_currenIso_Name__c</fullName>
        <description>Nombre Moneda</description>
        <formula>IF( Origin_currenIsoCode__c ==&apos;PEN&apos;, &apos;PEN&apos;,&apos;OTRO&apos;)</formula>
        <label>origin_currenIso_Name</label>
        <type>Text</type>
    </fields>	
	<fields>
        <fullName>Value_Unificade__c</fullName>
        <description>Campo Unificado</description>
        <formula>IF( profitability_type__c==&apos;01&apos; ,currenct_mon_amount__c,(currenct_mon_per__c*100) )</formula>
        <inlineHelpText>Campo Unificado</inlineHelpText>
        <label>Value_Unificade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>account_id__c</fullName> 
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Profitability</relationshipLabel>
        <relationshipName>Account_Profitability</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>currenct_mon_amount__c</fullName>
        <label>Current month amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>currenct_mon_per__c</fullName>
        <label>Current month percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>current_ydt_amount__c</fullName>
        <label>Annual amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>period__c</fullName>
        <formula>CASE(MONTH(year_month_day_date__c),1, $Label.Month1ShortName ,2,$Label.Month2ShortName,3,$Label.Month3ShortName,4,$Label.Month4ShortName,5,$Label.Month5ShortName,6,$Label.Month6ShortName,7,$Label.Month7ShortName,8,$Label.Month8ShortName,9,$Label.Month9ShortName,10,$Label.Month10ShortName,11,$Label.Month11ShortName,$Label.Month12ShortName) + &apos; &apos; + RIGHT(TEXT(YEAR(year_month_day_date__c)),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>previous_ydt_amount__c</fullName>
        <label>Previous annual amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>profitability_category_type__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>profitability_category_type_order__c</fullName>
        <formula>CASE(UPPER( profitability_category_type__c ),&apos;ALTAS&apos;,1,&apos;SPREAD&apos;,3,&apos;TASA&apos;,2,&apos;DI&apos;,4,&apos;MARGEN FINANCIERO&apos;,5,&apos;COMISIONES&apos;,6,&apos;MARGEN ORDINARIO&apos;,7,&apos;ROF&apos;,8,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>profitability_subcategory_form__c</fullName>
        <description>Campo helper</description>
        <formula>IF( profitability_subcategory_type__c ==&apos;TOTAL&apos;,IF(profitability_category_type__c==&apos;Altas&apos;,&apos;Facturación S/&apos;,IF(profitability_category_type__c==&apos;Spread&apos;,&apos;Spread %&apos;,IF(profitability_category_type__c==&apos;Tasa&apos;,&apos;Tasa %&apos;,IF(profitability_category_type__c==&apos;DI&apos;,&apos;DI%&apos;,&apos;&apos;)))),










IF( profitability_subcategory_type__c ==&apos;MN&apos;,&apos;Facturación  S/&apos;,
IF( profitability_subcategory_type__c ==&apos;ME&apos;,&apos;Facturación  S/&apos;,
IF( profitability_subcategory_type__c ==&apos;Spread&apos;,&apos;Spread %&apos;,
IF( profitability_subcategory_type__c ==&apos;Tasa&apos;,&apos;Tasa %&apos;, 
IF( profitability_subcategory_type__c ==&apos;DI&apos;,&apos;DI %&apos;,
IF( profitability_subcategory_type__c ==&apos;TOTAL CLIENTE&apos;,&apos;Facturación S/&apos;,
IF( profitability_subcategory_type__c ==&apos;TOTAL DI&apos;,&apos;DI %&apos;,
IF( profitability_subcategory_type__c ==&apos;TOTAL Spread&apos;,&apos;Spread %&apos;,
IF( profitability_subcategory_type__c ==&apos;TOTAL Tasa&apos;,&apos;Tasa %&apos;,&apos;&apos;))))))))))</formula>
        <inlineHelpText>Campo helper</inlineHelpText>
        <label>profitability_subcategory_form</label>
        <type>Text</type>
    </fields>
    <fields>	
        <fullName>profitability_subcategory_type__c</fullName>
        <label>Subcategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>profitability_subcategory_type_order__c</fullName>
        <formula>CASE(UPPER( profitability_subcategory_type__c ),&apos;ALTAS MN&apos;,1,&apos;ALTAS ME&apos;,2,&apos;SPREAD&apos;,4,&apos;TASA&apos;,3,&apos;DI&apos;,5,&apos;MF ACTIVOS&apos;,6,&apos;MF PASIVOS&apos;,7,&apos;MF OTROS&apos;,8,&apos;TOTAL SPREAD&apos;,10,&apos;TOTAL TASA&apos;,9,&apos;TOTAL DI&apos;,11,&apos;TOTAL&apos;,profitability_category_type_order__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subcategory order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>profitability_type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
		<externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>year_month_day_date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
	    <fields>
        <fullName>product_desc__c</fullName>
        <label>product_desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_group_classification_id__c</fullName>
        <label>product_group_classification_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_date_type_1_within_last_12_months__c</fullName>
        <formula>IF(  year_month_day_date__c &gt; ADDMONTHS(  account_id__r.account_profitability_type_1_last_date__c  ,-12) ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is date type 1 within last 12 months?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_date_type_1_within_last_6_months__c</fullName>
        <formula>IF(  year_month_day_date__c  &gt; ADDMONTHS(  account_id__r.account_profitability_type_1_last_date__c  ,-6) ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is date type 1 within last 6 months?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_date_type_2_within_last_12_months__c</fullName>
        <formula>IF( year_month_day_date__c &gt; ADDMONTHS(  account_id__r.account_profitability_type_2_last_date__c  ,-12) ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is date type 2 within last 12 months?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_type_3_last_date__c</fullName>
        <formula>IF( year_month_day_date__c =  account_id__r.account_profitability_type_3_last_date__c ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is type 3 last date?</label>
        <type>Checkbox</type>
    </fields>
    <label>Rentabilidad</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>account_id__c</columns>
        <columns>profitability_type__c</columns>
        <columns>profitability_category_type__c</columns>
        <columns>profitability_subcategory_type__c</columns>
        <columns>year_month_day_date__c</columns>
        <columns>currenct_mon_amount__c</columns>
        <columns>currenct_mon_per__c</columns>
        <columns>current_ydt_amount__c</columns>
        <columns>previous_ydt_amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rentabilidades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>